--- a/src/styles/_projects.scss
+++ b/src/styles/_projects.scss
@@ -14,7 +14,7 @@
   margin: 20px auto;
   iframe {
     max-width: 100%;
-    height: auto;
+    max-height: 100%;
     border-radius: 5px;
   }
   img {
